--- a/references.bib
+++ b/references.bib
@@ -1348,3 +1348,49 @@ PMCID: PMC1060882}
 	address = {New York, NY, USA}
 }
 
+
+@article{mar2000,
+	title = {Associations between air pollution and mortality in Phoenix, 1995-1997.},
+	author = {Mar, T F and Norris, G A and Koenig, J Q and Larson, T V},
+	year = {2000},
+	month = {04},
+	date = {2000-04},
+	journal = {Environmental Health Perspectives},
+	pages = {347--353},
+	volume = {108},
+	number = {4},
+	doi = {10.1289/ehp.00108347},
+	url = {https://ehp.niehs.nih.gov/doi/abs/10.1289/ehp.00108347},
+	note = {Publisher: Environmental Health Perspectives}
+}
+
+@article{ito2006,
+	title = {PM source apportionment and health effects: 2. An investigation of intermethod variability in associations between source-apportioned fine particle mass and daily mortality in Washington, DC},
+	author = {Ito, Kazuhiko and Christensen, William F. and Eatough, Delbert J. and Henry, Ronald C. and Kim, Eugene and Laden, Francine and Lall, Ramona and Larson, Timothy V. and Neas, Lucas and Hopke, Philip K. and Thurston, George D.},
+	year = {2006},
+	month = {07},
+	date = {2006-07},
+	journal = {Journal of Exposure Science & Environmental Epidemiology},
+	pages = {300--310},
+	volume = {16},
+	number = {4},
+	doi = {10.1038/sj.jea.7500464},
+	url = {https://www.nature.com/articles/7500464},
+	note = {Publisher: Nature Publishing Group},
+	langid = {en}
+}
+
+@article{ko2007,
+	title = {Effects of air pollution on asthma hospitalization rates in different age groups in Hong Kong},
+	author = {Ko, F. W. S. and Tam, W. and Wong, T. W. and Lai, C. K. W. and Wong, G. W. K. and Leung, T.-F. and Ng, S. S. S. and Hui, D. S. C.},
+	year = {2007},
+	date = {2007},
+	journal = {Clinical \& Experimental Allergy},
+	pages = {1312--1319},
+	volume = {37},
+	number = {9},
+	doi = {10.1111/j.1365-2222.2007.02791.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2222.2007.02791.x},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2222.2007.02791.x},
+	langid = {en}
+}
